# Machine-Learning-Labs

./: .gitignore  Lab12.ipynb  Lab13.ipynb  Lab2.ipynb  Lab3.ipynb  Lab4.ipynb  Lab6.ipynb  Lab7.ipynb  Lab8.ipynb  Lab9.ipynb  README.md  lab10.ipynb  pyproject.toml
Assignment 1/: code.ipynb  data_patient_dropout.csv  updated_data.csv
Assignment 2/: SVM_Assignment.py  best_rock_linear_svm_model.pkl  best_rock_poly_svm_model.pkl  best_rock_rbf_svm_model.pkl  modified_rock_classification_dataset_test.csv  modified_rock_classification_dataset_train.csv  modified_theme_park_visitor_count_dataset_test.csv  rock_classification_dataset.csv  updated_data_classification.csv
Assignment 3/: code.ipynb
Lab14 Open Lab/: flight_network.gml  lab14.ipynb  report.tex  slides.pptx
Lab5/: main.ipynb  main.py
Lab5/processed/centroid/: R001.txt  R002.txt  R003.txt  R004.txt  R005.txt  R006.txt  R007.txt  R008.txt  R009.txt  R010.txt  R011.txt  R012.txt  R013.txt  R014.txt  R015.txt  R016.txt  R017.txt  R018.txt  R019.txt  R020.txt  R021.txt  R022.txt  R023.txt  R024.txt  R025.txt
Lab5/processed/ratio/: R001.txt  R002.txt  R003.txt  R004.txt  R005.txt  R006.txt  R007.txt  R008.txt  R009.txt  R010.txt  R011.txt  R012.txt  R013.txt  R014.txt  R015.txt  R016.txt  R017.txt  R018.txt  R019.txt  R020.txt  R021.txt  R022.txt  R023.txt  R024.txt  R025.txt
Lab5/processed/slant/: R001.txt  (+24 more)
data/titanic/: train.csv.dvc
data/ujiindoorloc/: trainingData.csv.dvc  validationData.csv.dvc
mlruns/0/: meta.yaml
mlruns/297993574587620654/: meta.yaml
mlruns/343853780785666831/: meta.yaml
(+82 files in other folders)
