[tool.poetry]
name = "machine learning labs"
version = "0.1.0"
description = "These are  my 5th Semester CS lab's environment and dependencies."
authors = ["Ahmed-Mohiuddin-Shah <mohiuddinlive@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
numpy = "1.26.4"
shap = "0.44.1"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
kagglehub = "^0.3.5"
ucimlrepo = "^0.0.7"
ipython = "^8.30.0"
ipykernel = "^6.29.5"
networkx = "^3.4.2"
node2vec = "^0.5.0"
scipy = "1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
